--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 		"@tailwindcss/cli": "^4.1.13"
 	},
 	"scripts": {
-		"dev": "tailwindcss -i ./src/input.css -o ./assets/css/style.css --watch",
-		"build": "tailwindcss -i ./src/input.css -o ./assets/css/style.css --minify"
+		"dev": "tailwindcss -i ./src/input.css -o ./src/output.css --watch",
+		"build": "tailwindcss -i ./src/input.css -o ./src/output.css --minify"
 	}
 }
