--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,22 @@
 /node_modules
 .idea
+
+# Videos y archivos multimedia grandes
+*.mp4
+*.avi
+*.mov
+*.mkv
+*.wmv
+*.flv
+*.webm
+assets/videos/
+
+# Archivos de Azure
+__azurite_db_table__.json
+AzuriteConfig
+
+# Archivos temporales y de desarrollo
+*.tmp
+*.temp
+.DS_Store
+Thumbs.db
